force-app/main/default/objects/PricebookEntry/fields/Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Price__c</fullName>
    <formula>UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>