force-app/main/default/objects/PricebookEntry/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <formula>Product2.Floor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>