force-app/main/default/objects/PricebookEntry/fields/Window__c.field-meta.xml
<CustomField>
    <fullName>Window__c</fullName>
    <formula>Product2.Window__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Window</label>
    <type>Checkbox</type>
</CustomField>